app/javascript/style/components/_footer.scss
@use "../utils/scale";
@use "../utils/color";
@use '../utils/breakpoints' as *;

.main-footer {
  // layout
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1;
  margin-top: auto;
  min-height: scale.$footer_mobile_height;
  max-height: scale.$footer_mobile_height;

  // style
  font-size: 15px;
  color: color.$neutral-middle;
  border-top: 1px solid color.$neutral-soft;

  > * {
    padding: 10px 30px;
  }

  &__contact {
    display: flex;
    align-items: center;
  }

  &__twitter-icon,
  &__seperator {
    display: flex;
    align-items: center;
  }

  &__seperator {
    margin: 0 10px;
  }

  &__email {
    color: color.$neutral-middle;
    text-decoration: none;
    margin-right: auto;
  }

  &__copyright {
    text-align: center;
  }
}

@include large() {
  .main-footer {
    padding: 0 10px;
    min-height: scale.$footer_desktop_height;
    max-height: scale.$footer_desktop_height;
    flex-direction: row;
    justify-content: space-between;
  }
}

